--- a/src/App.css
+++ b/src/App.css
@@ -114,10 +114,6 @@ img {
   margin-right: auto;
 }
 
-.project-link-center {
-  margin-left: 36px;
-}
-
 .project-link-section {
   display: flex;
   margin-left: auto;
@@ -137,6 +133,12 @@ img {
 @media (max-width: 550px) {
   .image-link-section {
     margin-left: 0px;
+  }
+}
+
+@media (max-width: 380px) {
+  .project-link-left {
+    margin-left: -25px;
   }
 }
 
