--- a/src/App.css
+++ b/src/App.css
@@ -67,6 +67,22 @@ body {
   height: 24px;
 }
 
+.project-link-center {
+  margin-left: 38px;
+}
+
+@media (max-width: 2500px) {
+  .bot-link-spacer {
+    height: 0px;
+  }
+}
+
+@media (min-width: 2501px) {
+  .bot-link-spacer {
+    height: 24px;
+  }
+}
+
 .carousel-things {
   width: 100%;
 }
@@ -78,6 +94,7 @@ body {
 }
 
 .carousel-item {
+  height: 100%;
 }
 
 .project-spacer {
