--- a/src/App.css
+++ b/src/App.css
@@ -118,6 +118,7 @@ body {
   justify-content: center;
   flex-direction: column;
   margin: 12px;
+  height: 100%;
 }
 
 .project-image {
@@ -145,6 +146,9 @@ img {
   margin-right: auto;
   justify-content: center;
   margin-left: 30px;
+}
+.iphone-links {
+  margin-right: 32px;
 }
 
 @media (max-width: 550px) {
